# sabithpocker.github.io

./: CNAME  README.md  README_RUST.md  about.html  alhambra.html  all.html  audio-visualizer.html  generic-shader.html  gulpfile.js  index.html  koch-code.html  mandelbrot.html  package-lock.json  package.json  sample.js  sierpinski-fractal.html  sierpinski.py  site.webmanifest  spirograph.html  tensor.html
css/: style.css
generative_art/: Cargo.toml
generative_art/src/: lib.rs  shader.wgsl
js/: main.js
js/components/: mm-spirograph.js
old_code/: README.md  index.html
old_code/css/: style.css
old_code/js/: delaunay.js  main.js
src/css/: style.css
src/css/components/: fractals.css
src/js/: about.js  data.js  generic-shader.js  index.js  main.js  perlin.js  script.js
src/js/components/: mm-alhambra.js  mm-audio-visualizer.js  mm-kochcode.js  mm-mandelbrot.js  mm-shader-canvas.js  mm-sierpinski.js  mm-spirograph.js  mm-svg-spirograph.js
src/js/components/analytics/: google-analytics.js
src/js/components/performance/: performance-monitor.js
src/js/components/ui-elements/: side-bar.js  (+2 more)
src/js/utils/: animate-spirograph.js  organic-animate-sierpinski.js  organic-animate-spirograph.js
src/js/vertex-shaders/: fragment-shader-2.js  fragment-shader-source.js  gradient-shader-dark.js  gradient-shader.js
src/models/: textured.mtl
src/sass/: _colors.sass  _normalize.sass  _typography.sass  style.sass
src/sass/components/: _content.sass  _fractals.sass  _highlight.sass  _intro.sass  _navigation.sass  _sidebar.sass
src/sass/mixins/: breakpoints.sass
(+6 files in other folders)
