[package]
name = "wgpu-examples"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"
description = "Common example code"
homepage = "https://example.com"
repository = "https://github.com/example/repo"
keywords = ["example", "wgpu"]
license = "MIT/Apache-2.0"
publish = false

[dependencies]
bytemuck = "1.7"
cfg-if = "1.0"
encase = { version = "0.3", features = ["glam"] }
flume = "0.10"
getrandom = "0.2"
glam = "0.20"
ktx2 = "0.2"
log = "0.4"
nanorand = "0.5.1"  # Use a specific older version
noise = "0.7"
obj = "0.10"
png = "0.17"
pollster = "0.2"
web-time = "0.1"
wgpu = "0.11"
winit = "0.25"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
fern = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "ImageData",
    "Response",
    "HtmlImageElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]